<resources>
    <string name="app_name">FEI</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_save">Save</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="logo">logo</string>
    <string name="services">Services</string>
    <string name="settings">Settings</string>
    <string name="tickets">Tickets</string>
    <string name="register">Register</string>
    <string name="register_upper">REGISTER</string>
    <string name="servicePostOffice">Service Post Office</string>
    <string name="number">Number: %d</string>
    <string name="take_ticket">Take Ticket</string>
    <string name="being_attended">At Service Desk</string>
    <string name="line_state">Line State</string>
    <string name="loading">Loading</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="logout">Log Out</string>
    <string name="notifications">Notifications</string>
    <string name="notificationsU">NOTIFICATIONS</string>
    <string name="my_account">My Account</string>
    <string name="at_service_desk">At service desk: %d</string>
    <string name="line">Line: %d</string>
    <string name="queue_name">Queue Name</string>
    <string name="username">USERNAME</string>
    <string name="email">EMAIL</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">CONFIRM PASSWORD</string>
    <string name="confirm_password_prompt">Confirm password</string>
    <string name="name">NAME</string>
    <string name="name_prompt">Name</string>
    <string name="phone_number">PHONE NUMBER</string>
    <string name="phone_number_prompt">Phone number</string>
    <string name="address">ADDRESS</string>
    <string name="nif">NIF</string>
    <string name="forecast">forecast</string>
    <string name="appicon">AppIcon</string>
    <string name="prompt_address">address</string>

    <string name="register_success_title">Register</string>
    <string name="register_success_message">Register successful</string>

    <string name="default_success_title">Request</string>
    <string name="default_success_message">Request successful</string>

    <string name="username_exists">Username already exists!</string>
    <string name="email_exists">Email already exists!</string>
    <string name="register_password_not_equal">Passwords not equal</string>
    <string name="register_failed">Register failed! Try again later!</string>
</resources>
